업로드 무시할 파일 추가
ignore add

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,33 @@
 
 test.txt
+FlappyBird_3Hour/Assembly-CSharp.csproj
+FlappyBird_3Hour/Library/EditorInstance.json
+FlappyBird_3Hour/Library/ScriptAssemblies/Assembly-CSharp.dll
+FlappyBird_3Hour/Library/ScriptAssemblies/Assembly-CSharp.pdb
+FlappyBird_3Hour/Library/ScriptAssemblies/BuiltinAssemblies.stamp
+FlappyBird_3Hour/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll
+FlappyBird_3Hour/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.pdb
+FlappyBird_3Hour/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll
+FlappyBird_3Hour/Library/ScriptAssemblies/Unity.CollabProxy.Editor.pdb
+FlappyBird_3Hour/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll
+FlappyBird_3Hour/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.pdb
+FlappyBird_3Hour/Library/ScriptAssemblies/Unity.TextMeshPro.dll
+FlappyBird_3Hour/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll
+FlappyBird_3Hour/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.pdb
+FlappyBird_3Hour/Library/ScriptAssemblies/Unity.TextMeshPro.pdb
+FlappyBird_3Hour/Library/shadercompiler-UnityShaderCompiler.exe0.log
+FlappyBird_3Hour/Library/StateCache/Hierarchy/9233fd-mainStage.json
+FlappyBird_3Hour/Temp/__Backupscenes/0.backup
+FlappyBird_3Hour/Temp/UnityLockfile
+FlappyBird_3Hour/Temp/UnityTempFile-0b014b4ff74054c46b638626b0c92f5e
+FlappyBird_3Hour/Temp/UnityTempFile-34e1bd7cf440ede4291e5a3b7e136251
+FlappyBird_3Hour/Temp/UnityTempFile-a5b544ab2835aad418464be8a17711da
+FlappyBird_3Hour/Temp/UnityTempFile-af96c4bf68ace874794b52fe1b80ad6e
+FlappyBird_3Hour/Temp/UnityTempFile-c2daad4fe55e1834a98d4fb2a97d731f
+FlappyBird_3Hour/Temp/UnityTempFile-c6050acaa4c2ba2498a0ec4979a1894a
+FlappyBird_3Hour/Temp/UnityTempFile-d2db439dc97d09a459a3a67a86ce86e6
+FlappyBird_3Hour/Temp/UnityTempFile-d9a44aa1ffc7ecd4193760799e7b6732
+FlappyBird_3Hour/Temp/UnityTempFile-da2dd5090c454e6479112f6413064160
+FlappyBird_3Hour/Temp/UnityTempFile-e01fae76f5537d1419faa70646141747
+FlappyBird_3Hour/Temp/UnityTempFile-e072b6219ecaee64a97e4a75e95bb04f
+FlappyBird_3Hour/Temp/UnityTempFile-e5518bf681467134b852629a9fd8cb28
